@@ -16,6 +16,7 @@
   *  - Added new RNDIS Ethernet Host Class Driver
   *  - Added new RNDIS Ethernet Host ClassDriver demo
   *  - Added CDC_Host_Flush() function to the CDC Host Class driver to flush sent data to the attached device
+  *  - Added PDI programming support for XMEGA devices to the AVRISP programmer project
   *
   *  <b>Changed:</b>
   *  - Removed code in the Keyboard demos to send zeroed reports between two reports with differing numbers of keycodes
